force-app/main/default/objects/EYI_Inventory__c/fields/Built_up_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Built_up_Area_Sq_mt__c</fullName>
    <formula>EYI_Built_up_Area__c  * 0.09290304</formula>
    <label>Built-up Area (Sq Mtr)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>