force-app/main/default/objects/EYI_Inventory__c/fields/Car_Parking_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Type_1__c</fullName>
    <label>Car Parking Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Podium</fullName>
            </value>
            <value>
                <fullName>Measurement Podium</fullName>
            </value>
            <value>
                <fullName>Ground Stilt</fullName>
            </value>
            <value>
                <fullName>Measurement Stilt</fullName>
            </value>
            <value>
                <fullName>Open Car Parking</fullName>
            </value>
            <value>
                <fullName>Stack Car Parking</fullName>
            </value>
            <value>
                <fullName>Two Wheeler Parking</fullName>
            </value>
            <value>
                <fullName>VILLA V3</fullName>
            </value>
            <value>
                <fullName>VILLA V1</fullName>
            </value>
            <value>
                <fullName>VILLA V2</fullName>
            </value>
            <value>
                <fullName>Tanti Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>