force-app/main/default/objects/EYI_Inventory__c/fields/Carpet_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_Sq_mt__c</fullName>
    <formula>EYI_Carpet_Area__c  * 0.09290304</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area (Sq Mtr)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>