force-app/main/default/objects/EYI_Inventory__c/fields/Carpet_Area_with_2_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_with_2_Decimal__c</fullName>
    <formula>FLOOR(EYI_Carpet_Area_Sq_mt__c * 100) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area with 2 Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>