force-app/main/default/objects/EYI_Inventory__c/fields/Common_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Common_Area_Sq_mt__c</fullName>
    <formula>EYI_Common_Area__c  * 0.09290304</formula>
    <label>Common Area (Sq Mtr)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>