force-app/main/default/objects/EYI_Inventory__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>2.5BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>3.5BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>