force-app/main/default/objects/EYI_Inventory__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>Construction</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>