force-app/main/default/objects/EYI_Inventory__c/fields/EYI_4_Wheeler_Parking_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_4_Wheeler_Parking_Value__c</fullName>
    <description>This is used for Car parking value (Additional)</description>
    <formula>EYI_Additional_Car_Park_Amount__c  * (EYI_Project__r.EYI_Ready_Recknkor__c * 0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 Wheeler Parking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>