force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Additional_Car_Park_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Additional_Car_Park_Amount__c</fullName>
    <label>Additional Car Park Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>