force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Apartment_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Apartment_Ready_Date__c</fullName>
    <label>Apartment Ready Date</label>
    <type>Date</type>
</CustomField>