force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Available_For_Booking__c.field-meta.xml
<CustomField>
    <fullName>EYI_Available_For_Booking__c</fullName>
    <formula>OR(TEXT(EYI_Inventory_Status__c) = &apos;Available&apos;,TEXT(EYI_Inventory_Status__c) = &apos;EOI Blocked&apos;, TEXT(EYI_Inventory_Status__c) = &apos;Quotation is sent&apos;, TEXT(EYI_Inventory_Status__c) = &apos;Payment in progress&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available For Booking</label>
    <type>Checkbox</type>
</CustomField>