force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Balcony_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Balcony_Area__c</fullName>
    <label>Balcony Area</label>
    <length>70</length>
    <type>Text</type>
</CustomField>