force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Base_unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>EYI_Base_unit_of_Measure__c</fullName>
    <label>Base unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>