force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Big_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Big_Project__c</fullName>
    <description>It is used for calculating Total * 10%</description>
    <formula>(EYI_Total__c  * EYI_Project__r.EYI_Ready_Recknkor_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Big Project</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>