force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Built_up_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Built_up_Area_Sq_mt__c</fullName>
    <formula>EYI_Built_up_Area__c  * 0.092903</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Built up Area (Sq mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>