force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Car_Park_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Park_Count__c</fullName>
    <label>Car Park Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>