force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Carpet_Area__c</fullName>
    <label>Carpet Area</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>