force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Cost_Sheet_Flat_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cost_Sheet_Flat_Code__c</fullName>
    <formula>EYI_Tower__c + &quot;-&quot; + EYI_Inventory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Sheet Flat Code</label>
    <type>Text</type>
</CustomField>