force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Date_of_Agreement_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_of_Agreement_to_Sell__c</fullName>
    <formula>EYI_Opportunity__r.EYI_Date_of_Agreement_to_Sell__c</formula>
    <label>Date of Agreement to Sell</label>
    <type>Date</type>
</CustomField>