force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Channel Partner Sale</fullName>
                <isActive>false</isActive>
                <label>Channel Partner Sale</label>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
                <isActive>false</isActive>
                <label>Direct Sales</label>
            </value>
            <value>
                <fullName>MHADA Sale</fullName>
                <isActive>false</isActive>
                <label>MHADA Sale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>