force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Encl_Bal_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Encl_Bal_Sq_mt__c</fullName>
    <formula>EYI_Encl_Balcony_Area_in_Sq_ft__c * 0.09290304</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encl. Bal (Sq Mtr)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>