force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Encl_Balcony_Area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Encl_Balcony_Area_in_Sq_ft__c</fullName>
    <description>Additional</description>
    <label>Encl. Balcony Area in Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>