force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Encl_Balcony_Area_with_2_Decimal__c.field-meta.xml
<CustomField>
    <fullName>EYI_Encl_Balcony_Area_with_2_Decimal__c</fullName>
    <formula>FLOOR(EYI_Encl_Bal_Sq_mt__c * 100) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encl. Balcony Area with 2 Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>