force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Expected_for_Handover_by__c.field-meta.xml
<CustomField>
    <fullName>EYI_Expected_for_Handover_by__c</fullName>
    <label>Expected for Handover by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>