force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Final_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Market_Value__c</fullName>
    <description>It is calculating Big Project and Total amount.</description>
    <formula>EYI_Total__c  +  EYI_Big_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>