force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Final_Snagging_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Snagging_Completed_Date__c</fullName>
    <label>Final Snagging Completed Date</label>
    <type>Date</type>
</CustomField>