force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Final_Snagging_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Snagging_Status__c</fullName>
    <label>Final Snagging Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>