force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Flat_Associated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Flat_Associated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flat Associated</label>
    <referenceTo>EYI_Inventory__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>