force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Flat_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Flat_No__c</fullName>
    <label>Flat No/Shop No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>