force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Floor_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_No__c</fullName>
    <formula>IF( ISPICKVAL(EYI_Typology__c, &apos;Villa&apos;) , LEFT(RIGHT( EYI_Inventory_Number__c , 5), 2), LEFT(RIGHT( EYI_Inventory_Number__c , 4), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor No</label>
    <type>Text</type>
</CustomField>