force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_Number__c</fullName>
    <label>Floor Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>