force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Garage_Parking_space_area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Garage_Parking_space_area_in_Sq_ft__c</fullName>
    <label>Garage/Parking space area in Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>