force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Garage_Parking_space_area_in_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>EYI_Garage_Parking_space_area_in_Sq_Mtr__c</fullName>
    <description>Additional</description>
    <formula>EYI_Garage_Parking_space_area_in_Sq_ft__c * 0.092903</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garage/Parking space area in Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>