force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Gym_Servants_Quarter_Area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Gym_Servants_Quarter_Area_in_Sq_ft__c</fullName>
    <label>Gym/Servants Quarter Area in Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>