force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Link__c</fullName>
    <formula>$Label.EYI_Salesforce_URL + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Link</label>
    <type>Text</type>
</CustomField>