force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Number__c</fullName>
    <externalId>true</externalId>
    <label>Inventory Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>