force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Series__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Series__c</fullName>
    <label>Inventory Series</label>
    <length>50</length>
    <type>Text</type>
</CustomField>