force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Series_Auto__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Series_Auto__c</fullName>
    <formula>LEFT(RIGHT( EYI_Inventory_Number__c , 2), 2)</formula>
    <label>Inventory Series</label>
    <type>Text</type>
</CustomField>