force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Refuge</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Possesion Given</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <isActive>false</isActive>
                <label>Available</label>
            </value>
            <value>
                <fullName>EOI Blocked</fullName>
                <isActive>false</isActive>
                <label>EOI Blocked</label>
            </value>
            <value>
                <fullName>Hold For Booking</fullName>
                <isActive>false</isActive>
                <label>Hold For Booking</label>
            </value>
            <value>
                <fullName>Not Sanctioned</fullName>
                <isActive>false</isActive>
                <label>Not Sanctioned</label>
            </value>
            <value>
                <fullName>Payment In Progress</fullName>
                <isActive>false</isActive>
                <label>Payment In Progress</label>
            </value>
            <value>
                <fullName>Possession Given</fullName>
                <isActive>false</isActive>
                <label>Possession Given</label>
            </value>
            <value>
                <fullName>Quotation Is Sent</fullName>
                <isActive>false</isActive>
                <label>Quotation Is Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>