force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Sales</fullName>
            </value>
            <value>
                <fullName>Commercial Sales</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>