force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Is_updated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to trigger batch job for SAP data syncing</description>
    <label>Is updated?</label>
    <type>Checkbox</type>
</CustomField>