force-app/main/default/objects/EYI_Inventory__c/fields/EYI_isEOIBlocked__c.field-meta.xml
<CustomField>
    <fullName>EYI_isEOIBlocked__c</fullName>
    <formula>TEXT(EYI_Inventory_Status__c) != &apos;EOI Blocked&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEOIBlocked</label>
    <type>Checkbox</type>
</CustomField>