force-app/main/default/objects/EYI_Inventory__c/fields/EYI_isResidential__c.field-meta.xml
<CustomField>
    <fullName>EYI_isResidential__c</fullName>
    <formula>IF(TEXT(EYI_Inventory_Type__c) = &quot;Residential&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isResidential</label>
    <type>Checkbox</type>
</CustomField>