force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Laundry_Kitchen_Area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Laundry_Kitchen_Area_in_Sq_ft__c</fullName>
    <label>Laundry Kitchen Area in Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>