force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Leasing_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Leasing_Status__c</fullName>
    <label>Leasing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Leased out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>