force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Lobby_Admeasuring_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lobby_Admeasuring_in_Sq_ft__c</fullName>
    <label>Lobby Admeasuring in Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>