force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Market_Value__c</fullName>
    <description>It is calculating Market Value</description>
    <formula>EYI_Project__r.EYI_Ready_Recknkor__c  *  EYI_Total_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>