force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
                <isActive>false</isActive>
                <label>Parking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>