force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Material_Price_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Price_Group__c</fullName>
    <label>Material Price Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>